Set root min-height to avoid footer jump

--- a/designer/client/index.scss
+++ b/designer/client/index.scss
@@ -41,6 +41,10 @@ body {
   }
 }
 
+#root {
+  min-height: 89vh;
+}
+
 #app {
   .menu {
     background-color: #ffffff;
